Update node_props, pass in as kwarg

--- a/distributed-skeleton-analysis-with-dask.ipynb
+++ b/distributed-skeleton-analysis-with-dask.ipynb
@@ -1192,12 +1192,11 @@
     "nonzero_pixel_intensity = raw_data[skelint > 0]\n",
     "nonzero_pixel_intensity.compute_chunk_sizes()  # important, otherwise the indexing with sorted_indices thinks it's out of bounds\n",
     "node_props = nonzero_pixel_intensity[sorted_indices].compute()  # trigger Dask computation\n",
-    "node_props = np.concatenate((np.array([0]), node_props))  # add a weird dummy index - is this right?\n",
+    "node_props = np.concatenate((np.array([0]), node_props))  # add a dummy index\n",
     "\n",
     "from skan.csr import csr_to_nbgraph\n",
     "\n",
     "nbgraph = csr_to_nbgraph(graph, node_props=None)  # node_props=None is the default\n",
-    "# Is this even accurate when we pass in node_props? It doesn't look like there's any sanity checking going on...\n",
     "# nbgraph = csr_to_nbgraph(graph, node_props=node_props)  # node_props=None is the default\n",
     "\n",
     "skel_obj.nbgraph = nbgraph"
@@ -2424,12 +2423,11 @@
     "nonzero_pixel_intensity = raw_data[skelint > 0]\n",
     "nonzero_pixel_intensity.compute_chunk_sizes()  # important, otherwise the indexing with sorted_indices thinks it's out of bounds\n",
     "node_props = nonzero_pixel_intensity[sorted_indices].compute()  # trigger Dask computation\n",
-    "node_props = np.concatenate((np.array([0]), node_props))  # add a weird dummy index - is this right?\n",
+    "node_props = np.concatenate((np.array([0]), node_props))  # add a dummy index\n",
     "\n",
     "from skan.csr import csr_to_nbgraph\n",
     "\n",
-    "nbgraph = csr_to_nbgraph(graph, node_props=None)  # node_props=None is the default\n",
-    "# Is this even accurate when we pass in node_props? It doesn't look like there's any sanity checking going on...\n",
+    "nbgraph = csr_to_nbgraph(graph, node_props=node_props)  # node_props=None is the default\n",
     "# nbgraph = csr_to_nbgraph(graph, node_props=node_props)  # node_props=None is the default\n",
     "\n",
     "skel_obj.nbgraph = nbgraph"
