Coerce nonzero_pixel_ids to numpy before argsort
Edwin reports a problem if we don't explicitly convert `nonzero_pixel_ids` to numpy before applying argsort.
https://forum.image.sc/t/problem-using-skan-and-dask/59883

--- a/distributed-skeleton-analysis-with-dask.ipynb
+++ b/distributed-skeleton-analysis-with-dask.ipynb
@@ -1186,7 +1186,8 @@
    "source": [
     "# node_prop for Skeleton class, so we can get the NBGraph (numba-ified graph)\n",
     "nonzero_pixel_ids = skelint[skelint > 0]\n",
-    "sorted_indices = np.argsort(nonzero_pixel_ids)  # coerces to a numpy array, Dask doesn't implement argsort()\n",
+    "nonzero_pixel_ids = np.asarray(nonzero_pixel_ids)  # coerces to a numpy array\n",
+    "sorted_indices = np.argsort(nonzero_pixel_ids)  # Dask doesn't implement argsort\n",
     "\n",
     "raw_data = da.random.random(skelint.shape)  # make some dummy data, since the test skeleton doesn't have a raw image\n",
     "nonzero_pixel_intensity = raw_data[skelint > 0]\n",
@@ -2417,7 +2418,8 @@
     "# Create a numba-compatible version of the skeleton graph adjacency matrix\n",
     "# node_prop for Skeleton class, so we can get the NBGraph (numba-ified graph)\n",
     "nonzero_pixel_ids = skelint[skelint > 0]\n",
-    "sorted_indices = np.argsort(nonzero_pixel_ids)  # coerces to a numpy array, Dask doesn't implement argsort()\n",
+    "nonzero_pixel_ids = np.asarray(nonzero_pixel_ids)  # coerces to a numpy array\n",
+    "sorted_indices = np.argsort(nonzero_pixel_ids)  # Dask doesn't implement argsort\n",
     "\n",
     "raw_data = original_image\n",
     "nonzero_pixel_intensity = raw_data[skelint > 0]\n",
